Slack 인증 절차 내재화 (STEP 2 - Access Token)  : Authorization Grant 이후 Access Token 획득 절차 구현

--- a/stock-data-api/pom.xml
+++ b/stock-data-api/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>jersey-client</artifactId>
             <version>1.19</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.19</version>
+        </dependency>
     </dependencies>
 
     <build>
