--- a/stock-data-api/pom.xml
+++ b/stock-data-api/pom.xml
@@ -67,6 +67,18 @@
             <artifactId>jersey-json</artifactId>
             <version>1.19</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
