Mybatis 설정 추가 (진행중)  - 접속정보 추가 (application.properties)  - Datasource Config 추가  - Maven 의존성 추가

--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=9998
 server.http2.enabled=true
 server.compression.enabled=true
 spring.mvc.static-path-pattern=/static/**
+
+spring.datasource.hikari.driver-class-name=jdbc:postgresql:nogadax
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/db_study
+spring.datasource.hikari.username=scrapper
+spring.datasource.hikari.password=1111
