--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.compression.enabled=true
 spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.hikari.driver-class-name=jdbc:postgresql:nogadax
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/db_study
-spring.datasource.hikari.username=scrapper
-spring.datasource.hikari.password=1111
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/test_boot
+spring.datasource.hikari.username=postgres
+spring.datasource.hikari.password=1234
