Mybatis 설정 추가 (진행중)  - 접속정보 변경

--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.compression.enabled=true
 spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.hikari.driver-class-name=jdbc:postgresql:nogadax
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/test_boot
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/stock_data
 spring.datasource.hikari.username=postgres
 spring.datasource.hikari.password=1234
