Mybatis 설정 추가 (진행중)  - DB 설정 변경

--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.http2.enabled=true
 server.compression.enabled=true
 spring.mvc.static-path-pattern=/static/**
 
-spring.datasource.hikari.driver-class-name=jdbc:postgresql:nogadax
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/stock_data
+spring.datasource.hikari.maximum-pool-size=4
+
+spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/stock_data
 spring.datasource.hikari.username=postgres
 spring.datasource.hikari.password=1234
