--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/stock_data
 spring.datasource.hikari.username=postgres
 spring.datasource.hikari.password=1234
+
+#spring.jpa.properties.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
