--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.http2.enabled=true
 server.compression.enabled=true
 spring.mvc.static-path-pattern=/static/**
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
 spring.datasource.hikari.maximum-pool-size=4
 
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
@@ -12,3 +16,5 @@ spring.datasource.hikari.password=1234
 
 #spring.jpa.properties.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+mybatis.mapper-locations=mapper/**/*.xml
