- 코드 정리 (AuthController, UserAuthRunner - oauth client secret 등에 대한 설정들 properties 파일로 분리   (추후 커스텀 oauth 관련 properties에 추가하고 application.propertes에서 제거후 slack 어드민에서 client id 변경후 gitignore에 반영 예정) - 테스트 해보던 html 파일들 제거

--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.datasource.hikari.password=1234
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 mybatis.mapper-locations=mapper/**/*.xml
+
+### slack
+slack.client-id=680595488112.691875062899
+slack.client-secret=f44c1e5af174e4fbe7ed2c09b6de85cf
+slack.oauth.authorize.base_url=https://slack.com/oauth/authorize
