--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -21,3 +21,7 @@ mybatis.mapper-locations=mapper/**/*.xml
 
 ### slack
 oauth-slack.config=oauth-slack.properties
+
+
+## oauth
+oauth.access_token.validity_period=3600
