--- a/stock-data-api/pom.xml
+++ b/stock-data-api/pom.xml
@@ -121,12 +121,16 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
+            <version>2.1.5.RELEASE</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.10.RELEASE</version>
         </dependency>
+
 
     </dependencies>
 
