slf4j, Logback, log4jdbc  : 기능 추가

--- a/stock-data-api/src/main/resources/application.properties
+++ b/stock-data-api/src/main/resources/application.properties
@@ -9,8 +9,16 @@ spring.datasource.password=1234
 
 spring.datasource.hikari.maximum-pool-size=4
 
-spring.datasource.hikari.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/stock_data
+# 변경 전
+#spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+# 변경 후 (log4jdbc)
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+# 변경 전
+#spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/stock_data
+# 변경 후 (log4jdbc)
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:postgresql://localhost:5432/stock_data
+
 spring.datasource.hikari.username=postgres
 spring.datasource.hikari.password=1234
 
@@ -21,7 +29,6 @@ mybatis.mapper-locations=mapper/**/*.xml
 
 ### slack
 oauth-slack.config=oauth-slack.properties
-
 
 ## oauth
 oauth.access_token.validity_period=3600
