--- a/stock-data-api/pom.xml
+++ b/stock-data-api/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
+        <!-- log4jdbc-log4j2 -->
+        <dependency>
+            <groupId>org.bgee.log4jdbc-log4j2</groupId>
+            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+            <version>1.16</version>
+        </dependency>
+
         <!-- oauth2, jwt -->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
