--- a/py-scheduler/requirements.txt
+++ b/py-scheduler/requirements.txt
@@ -1,4 +1,11 @@
 APScheduler==3.6.1
+asn1crypto==0.24.0
+bcrypt==3.1.7
+cffi==1.12.3
+cryptography==2.7
+paramiko==2.6.0
+pycparser==2.19
+PyNaCl==1.3.0
 pytz==2019.2
 six==1.12.0
 tzlocal==2.0.0
