[cliff] CLI 초기 구성  : 커맨드 로직 추가 (진행중)

--- a/py-scheduler/setup.cfg
+++ b/py-scheduler/setup.cfg
@@ -10,7 +10,7 @@ packages = cli
 console_scripts =
     main_cli = cli.shell:main
 
-tutorial.cli =
+cli.common.command_list =
     command_list = cli.common.module:ListCommand
 ;    serve = tutorial.cmd.web.api:RestAPIServe
 ;tutorial.cli.sub1 =
