--- a/py-scheduler/requirements.txt
+++ b/py-scheduler/requirements.txt
@@ -15,3 +15,42 @@ cmd2==0.8.9
 cliff==2.15.0
 flask-restplus==0.12.1
 pbr>=2.0.0
+
+# slack - slacker
+aniso8601==7.0.0
+APScheduler==3.6.1
+asn1crypto==0.24.0
+attrs==19.1.0
+bcrypt==3.1.7
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+cliff==2.15.0
+cmd2==0.8.9
+cryptography==2.7
+Flask==1.1.1
+flask-restplus==0.12.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsonschema==3.0.2
+MarkupSafe==1.1.1
+paramiko==2.6.0
+# pbr==5.4.2
+prettytable==0.7.2
+pycparser==2.19
+PyNaCl==1.3.0
+pyparsing==2.4.2
+pyperclip==1.7.0
+pyreadline==2.1
+pyrsistent==0.15.4
+pytz==2019.2
+PyYAML==5.1.2
+requests==2.22.0
+six==1.12.0
+slacker==0.13.0
+stevedore==1.30.1
+tzlocal==2.0.0
+urllib3==1.25.3
+Werkzeug==0.15.5
