--- a/stock-data-api/pom.xml
+++ b/stock-data-api/pom.xml
@@ -142,6 +142,12 @@
             <artifactId>maven-resources-plugin</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
     </dependencies>
 
     <build>
