--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -34,5 +34,7 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    compile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
