--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -35,6 +35,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
 //    compile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 //    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
