oauth with google 코드 추가 thymeleaf 설정 추가

--- a/stock-api/src/main/resources/application.properties
+++ b/stock-api/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.profiles.include=oauth
+
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+# 개발 모드로 수정하면서 내용을 확인하고자 할떼 cache를 false로 선언한다.
+# 운영모드에서는 반드시 true로 설정해야 한다.
+spring.thymeleaf.cache=false
+spring.thymeleaf.order=0
