--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok')
 //    compile('org.springframework.boot:spring-boot-starter-test')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
