--- a/stock-api/src/main/resources/application.properties
+++ b/stock-api/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.thymeleaf.mode=HTML5
 # 운영모드에서는 반드시 true로 설정해야 한다.
 spring.thymeleaf.cache=false
 spring.thymeleaf.order=0
+server.port=8080
