세션 저장소로 jdbc를 선택, spring boot 설정 추가

--- a/stock-api/src/main/resources/application.properties
+++ b/stock-api/src/main/resources/application.properties
@@ -14,4 +14,9 @@ spring.thymeleaf.mode=HTML5
 # 운영모드에서는 반드시 true로 설정해야 한다.
 spring.thymeleaf.cache=false
 spring.thymeleaf.order=0
+
+# 세션 저장소를 jdbc로 지정
+spring.session.store-type=jdbc
+
+# server port
 server.port=8080
