--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('com.h2database:h2')
+//    spring-session-jdbc (세션 저장소를 jdbc로 지정)
+    compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
