--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -37,4 +37,5 @@ dependencies {
 //    spring-session-jdbc (세션 저장소를 jdbc로 지정)
     compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.springframework.security:spring-security-test")
 }
