--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('com.h2database:h2')
+    compile('org.mariadb.jdbc:mariadb-java-client')
 //    spring-session-jdbc (세션 저장소를 jdbc로 지정)
     compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')
