--- a/stock-api/src/main/resources/application.properties
+++ b/stock-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.profiles.include=oauth
+spring.profiles.include=oauth,real-db
 
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.check-template-location=true
