--- a/stock-api/build.gradle
+++ b/stock-api/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('com.h2database:h2')
     compile('org.mariadb.jdbc:mariadb-java-client')
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1")
 
     /** HikariCP -- */
     /**  - opt 1)
